--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,53 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<div class="container">
+	<div class="row">
+	  <div class="span2">
+		  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+	  </div>
+	  <div id="visitors_container" class="span2">
+	    Visitors
+	  </div>
+	  <div id="participants_container" class="span2">
+	    Participants
+	  </div>
+	  <div id="conversion_rate_container" class="span1">
+	    Conversion Rate
+	  </div>
+	  <div id="actions_container" class="span2">
+	    Actions
+	  </div>
+	 	<div id="roi_container" class="span2">
+	    ROI per Action
+	  </div>
+	  <div id="total_roi_container" class="span1">
+	    Total ROI
+	  </div>
+	</div>
+	<div class="row">
+		<div class="span2">
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+		</div>
+		<div class="span2">
+	  </div>
+	  <div class="span2">
+	  </div>
+	  <div class="span1">
+	  </div>
+	  <div class="span2">
+	  </div>
+	 	<div class="span2">
+	 		ROI per action
+	  </div>
+	  <div class="span1">
+	  </div>
+	</div>
+	<div class="row">
+		<div class="span2">
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+		</div>
+	</div>
+	<div class="row">
+		<div class="span2">
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+		</div>
+	</div>
+</div>
