--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -1,3 +1,43 @@
 // Place all the styles related to the StaticPages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.container {
+	width: 1170px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.container #traffic_sources_container {
+	width: 150px;
+	float: left;
+	border: none;
+}
+
+
+.container #traffic_sources_container .traffic_source {
+	width: 130px;
+	text-align: center;
+	border: solid 1px;
+	margin: 1em;
+	padding: 1em;
+}
+
+.conversion_sub_container {
+	border: solid 1px;
+	padding: 1em;
+	margin: 1em;
+	width: 150px;
+}
+
+.sub_container {
+	padding: 1em;
+	margin: 1em;
+	width: 200px;
+	float: left;
+}
+
+#actions_container p, #roi_defined_container div, #roi_per_action_container div {
+	display: none;
+}
