--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,52 +1,50 @@
+
 <div class="container">
-	<div class="traffic_sources_container">
+	<div id="traffic_sources_container" class="sub_container">
+		<h1>Traffic Sources</h1>
 	  <div id="web_ad_traffic_source" class="traffic_source">
-		    Cost Per Click: <input id="cpc_web_ad" type="text" name="cpc_web_ad"><br>
-  			Click Through Rate: <input id="ctr_web_ad" type="text" name="ctr_web_ad"><br>
-  			Visitors: <input id="visitors_web_ad" type="text" name="visitors_web_ad"><br>
-  			Clicks: <input id="clicks_web_ad" type="text" name="clicks_web_ad"><br>
-  			Total Cost: <input id="total_cost_web_ad" type="text" name="total_cost_web_ad"><br>
+		    Cost Per Click: <input id="cpc_web_ad" type="text" value="$5"><br>
+  			Total: <input id="total_cost_web_ad" type="text" value="10000" ><br>
 	  </div>
 	  <div id="email_traffic_source" class="traffic_source">
-		    Click Through Rate: <input id="ctr_email" type="text" name="ctr_email"><br>
-  			Emails: <input id="emails" type="text" name="emails"><br>
-  			Clicks: <input id="clicks_email" type="text" name="clicks_email"><br>
+		    Click Through Rate: <input id="ctr_email" type="text" value="10%"><br>
+  			Total: <input id="emails" type="text" name="emails" value="100000"><br>
 	  </div>
 	  <div id="website_traffic_source" class="traffic_source">
-		    Click Through Rate: <input id="ctr_website" type="text" name="ctr_website"><br>
-  			Visitors: <input id="visitors_website" type="text" name="visitors_website"><br>
-  			Clicks: <input id="clicks_website" type="text" name="clicks_website"><br>
+		    Click Through Rate: <input id="ctr_website" type="text" value="5%"><br>
+  			Total: <input id="visitors_website" type="text" value="100000"><br>
 	  </div>
 	  <div id="facebook_ad_traffic_source" class="traffic_source">
-		    Cost Per Click: <input id="cpc_fb_ad" type="text" name="cpc_fb_ad"><br>
-  			Click Through Rate: <input id="ctr_fb_ad" type="text" name="ctr_fb_ad"><br>
-  			Visitors: <input id="visitors_fb_ad" type="text" name="visitors_fb_ad"><br>
-  			Clicks: <input id="clicks_fb_ad" type="text" name="clicks_fb_ad"><br>
-  			Total Cost: <input id="total_cost_fb_ad" type="text" name="total_cost_fb_ad"><br>
+		    Cost Per Click: <input id="cpc_fb_ad" type="text" value="$3"><br>
+  			Total: <input id="total_cost_fb_ad" type="text" value="100000"><br>
+	  </div>
+    Total Cost: <input id="total_cost" type="text" name="total_cost"><br>
+	</div>
+	<div id="middle_container" class="sub_container">
+	<h1>Conversion</h1>
+	  <div id="visitors_container" class="conversion_sub_container">
+	    Visitors: <input id="total_visitors" type="text" name="total_visitors"><br>
+	  </div>
+	  <div id="participants_container" class="conversion_sub_container">
+	    Participants: <input id="total_participants" type="text" name="total_participants"><br>
+	  </div>
+	  <div id="conversion_rate_container" class="conversion_sub_container">
+	    Conversion Rate: <input id="conversion_rate" type="text" name="conversion_rate"><br>
 	  </div>
 	</div>
-  <div id="visitors_container" class="span2">
-    Visitors: <input id="total_visitors" type="text" name="total_visitors"><br>
-  </div>
-  <div id="participants_container" class="span2">
-    Visitors: <input id="total_participants" type="text" name="total_participants"><br>
-  </div>
-  <div id="conversion_rate_container" class="span1">
-    Conversion Rate: <input id="conversion_rate" type="text" name="conversion_rate"><br>
-  </div>
-  <div id="actions_container" class="span2">
-    Actions
+  <div id="actions_container" class="sub_container">
+    <h1>Actions</h1>
     <select id="actions_drop_down">
 		  <option value="agree_to_tos">Agree to Terms and Service</option>
 		  <option value="authentication">Authentication</option>
 		  <option value="button_click">Button Click</option>
 		  <option value="cast_admin_vote">Cast Admin Vote</option>
 		  <option value="cast_user_vote">Cast User Vote</option>
-		  <option value="checkin_vote">Checkin</option>
+		  <option value="checkin">Checkin</option>
 		  <option value="click_through">Click Through to a Link</option>
 		  <option value="code_redemption">Code Redemption</option>
 		  <option value="comment">Comment</option>
-		  <option value="compare_combos">Compare Combos</option>
+		  <option value="compare_combos">Compare Combinations</option>
 		  <option value="trivia_answer">Trivia Answer</option>
 		  <option value="prediction_answer">Prediction Answer</option>
 		  <option value="customer_integration_points">Customer Integration Points</option>
@@ -85,6 +83,7 @@
 		  <option value="watch_video">Watch Video</option>
 		  <option value="write_in_entry">Write-in Entry</option>
 		</select>
+			<button id="add_action" type="button">Add an Action</button>
 			<p id="agree_to_tos_text" >Agree to Terms and Service</p>
 		  <p id="authentication_text">Authentication</p>
 		  <p id="button_click_text" >Button Click</p>
@@ -94,7 +93,7 @@
 		  <p id="click_through_text" >Click Through to a Link</p>
 		  <p id="code_redemption_text">Code Redemption</p>
 		  <p id="comment_text">Comment</p>
-		  <p id="compare_combos_text">Compare Combos</p>
+		  <p id="compare_combos_text">Compare Combinations</p>
 		  <p id="trivia_answer_text">Trivia Answer</p>
 		  <p id="prediction_answer_text">Prediction Answer</p>
 		  <p id="customer_integration_points_text">Customer Integration Points</p>
@@ -133,106 +132,107 @@
 		  <p id="watch_video_text">Watch Video</p>
 		  <p id="write_in_entry_text">Write-in Entry</p>
   </div>
-  <div id="roi_defined_container" class="span2">
-    	<input id="agree_to_tos_defined"><br>
-		  <input id="authentication_defined"><br>
-		  <input id="button_click_defined" ><br>
-		  <input id="cast_admin_vote_defined" ><br>
-		  <input id="cast_user_vote_defined" ><br>
-		  <input id="checkin_defined"><br>
-		  <input id="click_through_defined" ><br>
-		  <input id="code_redemption_defined"><br>
-		  <input id="comment_defined"><br>
-		  <input id="compare_combos_defined"><br>
-		  <input id="trivia_answer_defined"><br>
-		  <input id="prediction_answer_defined"><br>
-		  <input id="customer_integration_points_defined"><br>
-		  <input id="email_share_defined"><br>
-		  <input id="entered_in_promo_defined"><br>
-		  <input id="facebook_tell_defined" ><br>
-		  <input id="foursquare_connect_defined"><br>
-		  <input id="friend_signin_defined"><br>
-		  <input id="friend_signup_defined"><br>
-		  <input id="group_reward_defined"><br>
-		  <input id="hashtag_defined"><br>
-		  <input id="instagram_follow_defined"><br>
-		  <input id="facebook_likes_defined"><br>
-		  <input id="mailing_list_defined"><br>
-		  <input id="network_bonus_defined"><br>
-		  <input id="page_view_defined"><br>
-		  <input id="peer_vote_defined"><br>
-		  <input id="pin_to_pinterest_defined"><br>
-		  <input id="pinterest_follow_defined"><br>
-		  <input id="prize_entries_defined"><br>
-		  <input id="puzzle_piece_defined"><br>
-		  <input id="referred_signup_defined"><br>
-		  <input id="referred_visit_defined"><br>
-		  <input id="registration_defined"><br>
-		  <input id="reminder_optin_defined"><br>
-		  <input id="poll_survey_defined"><br>
-		  <input id="tumblr_follow_defined"><br>
-		  <input id="twitter_follow_defined"><br>
-		  <input id="twitter_share_defined"><br>
-		  <input id="uploaded_content_defined"><br>
-		  <input id="uploaded_image_defined"><br>
-		  <input id="uploaded_sound_defined"><br>
-		  <input id="uploaded_story_defined"><br>
-		  <input id="uploaded_video_defined"><br>
-		  <input id="visiting_user_session_defined"><br>
-		  <input id="watch_video_defined"><br>
-		  <input id="write_in_entry_defined"><br>
+  <div id="roi_defined_container" class="sub_container">
+  		Actions
+    	<div id="agree_to_tos_defined">Agree to TOS<input></div>
+		  <div id="authentication_defined">Authentication<input ></div>
+		  <div id="button_click_defined">Button Click<input ></div>
+		  <div id="cast_admin_vote_defined">Cast Admin Vote<input ></div>
+		  <div id="cast_user_vote_defined">Cast User Vote<input ></div>
+		  <div id="checkin_defined">Checkin<input ></div>
+		  <div id="click_through_defined">Click Through to a Link<input ></div>
+		  <div id="code_redemption_defined">Code Redemption<input ></div>
+		  <div id="comment_defined">Comment<input ></div>
+		  <div id="compare_combos_defined">Compare Combinations<input ></div>
+		  <div id="trivia_answer_defined">Trivia Answer<input ></div>
+		  <div id="prediction_answer_defined">Prediction Answer<input ></div>
+		  <div id="customer_integration_points_defined">Customer Integration Points<input ></div>
+		  <div id="email_share_defined"><input >Email Share</div>
+		  <div id="entered_in_promo_defined"><input >Entered in Promotion</div>
+		  <div id="facebook_tell_defined">Facebook Tell<input ></div>
+		  <div id="foursquare_connect_defined">Foursquare Connect<input ></div>
+		  <div id="friend_signin_defined">Friend Signin<input ></div>
+		  <div id="friend_signup_defined">Friend Signup<input ></div>
+		  <div id="group_reward_defined">Group Reward<input ></div>
+		  <div id="hashtag_defined">Hashtag<input ></div>
+		  <div id="instagram_follow_defined">Instagram Follow<input ></div>
+		  <div id="facebook_likes_defined">Facebook Likes<input ></div>
+		  <div id="mailing_list_defined">Mailing List<input ></div>
+		  <div id="network_bonus_defined">Network Bonus<input ></div>
+		  <div id="page_view_defined">Page View<input ></div>
+		  <div id="peer_vote_defined">Peer Vote<input ></div>
+		  <div id="pin_to_pinterest_defined">Pin to Pinterest<input ></div>
+		  <div id="pinterest_follow_defined">Pinterest Follow<input ></div>
+		  <div id="prize_entries_defined">Prize Entries<input ></div>
+		  <div id="puzzle_piece_defined">Puzzle Piece<input ></div>
+		  <div id="referred_signup_defined">Referred Signup<input ></div>
+		  <div id="referred_visit_defined">Referred Visit<input ></div>
+		  <div id="registration_defined">Registration<input ></div>
+		  <div id="reminder_optin_defined">Reminder Optin<input ></div>
+		  <div id="poll_survey_defined">Poll Survey<input ></div>
+		  <div id="tumblr_follow_defined">Tumblr Follow<input ></div>
+		  <div id="twitter_follow_defined">Twitter Follow<input ></div>
+		  <div id="twitter_share_defined">Twitter Share<input ></div>
+		  <div id="uploaded_content_defined">Uploaded Content<input ></div>
+		  <div id="uploaded_image_defined">Uploaded Image<input ></div>
+		  <div id="uploaded_sound_defined">Uploaded Sound<input ></div>
+		  <div id="uploaded_story_defined">Uploaded Story<input ></div>
+		  <div id="uploaded_video_defined">Uploaded Video<input ></div>
+		  <div id="visiting_user_session_defined">Visiting User Session<input ></div>
+		  <div id="watch_video_defined">Watch Video<input ></div>
+		  <div id="write_in_entry_defined">Write in Entry<input ></div>
   </div>
- 	<div id="roi_per_action_container" class="span2">
+ 	<div id="roi_per_action_container" class="sub_container">
  			ROI Per Action
-      <input id="agree_to_tos__calculated"><br>
-		  <input id="authentication_calculated"><br>
-		  <input id="button_click_calculated" ><br>
-		  <input id="cast_admin_vote_calculated" ><br>
-		  <input id="cast_user_vote_calculated" ><br>
-		  <input id="checkin_calculated"><br>
-		  <input id="click_through_calculated" ><br>
-		  <input id="code_redemption_calculated"><br>
-		  <input id="comment_calculated"><br>
-		  <input id="compare_combos_calculated"><br>
-		  <input id="trivia_answer_calculated"><br>
-		  <input id="prediction_answer_calculated"><br>
-		  <input id="customer_integration_points_calculated"><br>
-		  <input id="email_share_calculated"><br>
-		  <input id="entered_in_promo_calculated"><br>
-		  <input id="facebook_tell_calculated" ><br>
-		  <input id="foursquare_connect_calculated"><br>
-		  <input id="friend_signin_calculated"><br>
-		  <input id="friend_signup_calculated"><br>
-		  <input id="group_reward_calculated"><br>
-		  <input id="hashtag_calculated"><br>
-		  <input id="instagram_follow_calculated"><br>
-		  <input id="facebook_likes_calculated"><br>
-		  <input id="mailing_list_calculated"><br>
-		  <input id="network_bonus_calculated"><br>
-		  <input id="page_view_calculated"><br>
-		  <input id="peer_vote_calculated"><br>
-		  <input id="pin_to_pinterest_calculated"><br>
-		  <input id="pinterest_follow_calculated"><br>
-		  <input id="prize_entries_calculated"><br>
-		  <input id="puzzle_piece_calculated"><br>
-		  <input id="referred_signup_calculated"><br>
-		  <input id="referred_visit_calculated"><br>
-		  <input id="registration_calculated"><br>
-		  <input id="reminder_optin_calculated"><br>
-		  <input id="poll_survey_calculated"><br>
-		  <input id="tumblr_follow_calculated"><br>
-		  <input id="twitter_follow_calculated"><br>
-		  <input id="twitter_share_calculated"><br>
-		  <input id="uploaded_content_calculated"><br>
-		  <input id="uploaded_image_calculated"><br>
-		  <input id="uploaded_sound_calculated"><br>
-		  <input id="uploaded_story_calculated"><br>
-		  <input id="uploaded_video_calculated"><br>
-		  <input id="visiting_user_session_calculated"><br>
-		  <input id="watch_video_calculated"><br>
-		  <input id="write_in_entry_calculated"><br>
+      <div id="agree_to_tos_calculated">Agree to TOS<input ></div>
+		  <div id="authentication_calculated">Authentication<input ></div>
+		  <div id="button_click_calculated">Button Click<input ></div>
+		  <div id="cast_admin_vote_calculated">Cast Admin Vote<input ></div>
+		  <div id="cast_user_vote_calculated">Cast User Vote<input ></div>
+		  <div id="checkin_calculated">Checkin<input ></div>
+		  <div id="click_through_calculated">Click Through<input ></div>
+		  <div id="code_redemption_calculated">Code Redemption<input ></div>
+		  <div id="comment_calculated">Comment<input ></div>
+		  <div id="compare_combos_calculated">Compare Combos<input ></div>
+		  <div id="trivia_answer_calculated">Trivia Answer<input ></div>
+		  <div id="prediction_answer_calculated">Prediction Answer<input ></div>
+		  <div id="customer_integration_points_calculated">Customer Integration Points<input ></div>
+		  <div id="email_share_calculated">Email Share<input ></div>
+		  <div id="entered_in_promo_calculated">Entered in Promo<input ></div>
+		  <div id="facebook_tell_calculated">Facebook Tell<input ></div>
+		  <div id="foursquare_connect_calculated">Foursquare Connect<input ></div>
+		  <div id="friend_signin_calculated">Friend Signin<input ></div>
+		  <div id="friend_signup_calculated">Friend Signup<input ></div>
+		  <div id="group_reward_calculated">Group Reward<input ></div>
+		  <div id="hashtag_calculated">Hashtag<input ></div>
+		  <div id="instagram_follow_calculated">Instagram Follow<input ></div>
+		  <div id="facebook_likes_calculated">Facebook Likes<input ></div>
+		  <div id="mailing_list_calculated">Mailing List<input ></div>
+		  <div id="network_bonus_calculated">Network Bonus<input ></div>
+		  <div id="page_view_calculated">Page View<input ></div>
+		  <div id="peer_vote_calculated">Peer Vote<input ></div>
+		  <div id="pin_to_pinterest_calculated">Pin to Pinterest<input ></div>
+		  <div id="pinterest_follow_calculated">Pinterest Follow<input ></div>
+		  <div id="prize_entries_calculated">Prize Entries<input ></div>
+		  <div id="puzzle_piece_calculated">Puzzle Piece<input ></div>
+		  <div id="referred_signup_calculated">Referred Signup<input ></div>
+		  <div id="referred_visit_calculated">Referred Visit<input ></div>
+		  <div id="registration_calculated">Registration<input ></div>
+		  <div id="reminder_optin_calculated">Reminder Optin<input ></div>
+		  <div id="poll_survey_calculated">Poll Survey<input ></div>
+		  <div id="tumblr_follow_calculated">Tumblr Follow<input ></div>
+		  <div id="twitter_follow_calculated">Twitter Follow<input ></div>
+		  <div id="twitter_share_calculated">Twitter Share<input ></div>
+		  <div id="uploaded_content_calculated">Uploaded Content<input ></div>
+		  <div id="uploaded_image_calculated">Uploaded Image<input ></div>
+		  <div id="uploaded_sound_calculated">Uploaded Sound<input ></div>
+		  <div id="uploaded_story_calculated">Uploaded Story<input ></div>
+		  <div id="uploaded_video_calculated">Uploaded Video<input ></div>
+		  <div id="visiting_user_session_calculated">Visiting User Session<input ></div>
+		  <div id="watch_video_calculated">Watch Video<input ></div>
+		  <div id="write_in_entry_calculated">Wrtie in Entry<input ></div>
   </div>
-  <div id="total_roi_container" class="span1">
+  <div id="total_roi_container" class="sub_container">
     Total ROI
     <input id="total_roi"><br>
   </div>
